# url-shortener-py

./: .gitignore  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yaml  pyproject.toml  start.sh
src/: main.py
src/adapters/repository/: interface.py
src/adapters/web/: deps.py  fastapi_app.py  handlers.py  lifespan.py  structs.py  urls.py
src/application/: use_case.py
src/domain/: entities.py  rules.py
src/infrastructure/confs/: settings.py
src/infrastructure/db/: memstorage.py  models.py  repo.py  session.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: ac9e1151f8ab_add_url_model.py
